# RIGOS

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
config/: private-archive-recipients.example.txt
configs/: product-contract.toml  rigos.conf.example
crates/rigos-config/: Cargo.toml
crates/rigos-config/src/: lib.rs  lib_entry.rs  main.rs
crates/rigos-config/tests/: admin_password_tty.rs  alpha8_recovery_gate.rs  bios_grub_bootstrap.rs  diagnostic_ssh.rs  firstboot_image_gate.rs  firstboot_observability.rs  firstboot_theme.rs  firstboot_theme_preview.rs  firstboot_tty.rs  hive_exit_image_verifier.rs  hive_exit_runtime_publish.rs  hive_exit_shell_syntax.rs  identity_seed.rs  import_fixture.rs  miner_observer_authority.rs  miner_stability.rs  operator_cli.rs  partition_node_readiness.rs  partition_sysfs_readiness.rs  randomx_build_entrypoint.rs  randomx_msr_authority.rs  recovery_access.rs  state_resize_recovery.rs  status_agent_image.rs  wsl_source_gate.rs
crates/rigos-config/tests/fixtures/: hive-xmrig.json
crates/rigos-evidence/: Cargo.toml
crates/rigos-evidence/src/: lib.rs  main.rs
crates/rigos-performance/: Cargo.toml
crates/rigos-performance/src/: lib.rs  main.rs
crates/rigos-schema/: Cargo.toml
crates/rigos-schema/src/: lib.rs  main.rs  validate.rs
crates/rigos-state/: Cargo.toml
crates/rigos-state/src/: lib.rs  main.rs  ready.rs
crates/rigos-state/tests/: lsblk_compat.rs
crates/rigos-state/tests/fixtures/: lsblk-tree.json
crates/rigos-xmrig/: Cargo.toml
crates/rigos-xmrig/examples/: probe_helper.rs
crates/rigos-xmrig/src/: lib.rs  version_probe.rs
crates/rigos-xmrig/tests/: explicit_config_boundary.rs
crates/rigosd/: Cargo.toml  build.rs
crates/rigosd/src/: lib.rs  main.rs
docs/: KNOWN-LIMITS.md  MULTI-RIG-STATUS.md  OPERATIONS-COMMANDS.txt  OPERATIONS.md  PHYSICAL-EVIDENCE-ALPHA25.md  PROJECT-HISTORY.md  README.md  RELEASES.md  SECURITY-MODEL.md  STATUS-SERVICE.md  alpha26-status-agent-acceptance.md  architecture.md  finalization-plan.md  historical-rc1-obsolete.md  hive-exit-hostile-review.md  json-cli-contract.md  local-rig-config.md  miner-provenance.md  performance-authority.md  physical-rig-validation.md  physical-validation-evidence.md  pool-contract.md  product-contract.md  release-claims.md  release-pipeline.md  roadmap.md  stability-campaign.txt  status-agent.md  third-party-components.md  threat-model.md  usb-architecture.md  usb-image-build.md  xmrig-api-security.md  xmrig-version-probe.md
functions/: status.js
migrations/: 0001_status.sql
schemas/: about-v1.schema.json  build-manifest-v1.schema.json  cli-envelope-v1.schema.json  component-provenance-v1.schema.json  doctor-report-v1.schema.json  flight-sheet-v1.schema.json  identity-v1.schema.json  image-build-manifest-v1.schema.json  image-layout-v1.schema.json  licenses-v1.schema.json  machine-snapshot-v1.schema.json  miner-snapshot-v1.schema.json  performance-status-v1.schema.json  physical-validation-manifest-v1.schema.json  physical-validation-result-v1.schema.json  pool-profile-v1.schema.json  redaction-report-v1.schema.json  rig-profile-v1.schema.json  state-layout-v1.schema.json
scripts/: apply-alpha8-physical-fixes.py  apply-hive-exit-review-fixes.py  build-rc.sh  build-release.sh  build-usb-image-entrypoint.sh  build-usb-image.sh  check-alpha8-runtime.py  check-alpha8-ssh-hotfix.py  check-offline-provisioning.sh  collect-physical-validation.sh  create-source-bundle.ps1  package-validation-evidence.ps1  preview-firstboot-theme.sh  rigos-blockdev-wrapper.sh  rigos-grub-install-wrapper.sh  rigos-sysfs-cat-wrapper.sh  test-miner-health-api-authority-errors.py  test-miner-health-api-schema.py  test-miner-health-api.py  test-miner-health-connection-state.py  test-miner-health-journal-fallback.py  test-runtime-token-publication.py  test-site.mjs  test-status-agent.py  test-status-functions.mjs  test-status-multi-rig.mjs  test-status-read.mjs  verify-alpha26-image.sh  verify-firstboot-image.sh  verify-firstboot-theme-wrapper.sh  verify-miner-observer-image.sh  verify-private-archive.ps1  verify-randomx-performance-image.sh  verify-runtime-dependencies.sh  verify-state-recovery-image.sh  verify-systemd-ordering.py  verify-usb-appliance.sh  verify-usb-image.sh  verify-usb-provisioning.sh  (+4 more)
(+51 files in other folders)
