[workspace]
members = [
  "crates/rigosd",
  "crates/rigos-core",
  "crates/rigos-machine",
  "crates/rigos-miner",
  "crates/rigos-xmrig",
  "crates/rigos-schema",
  "crates/rigos-evidence",
  "crates/rigos-contract",
  "crates/rigos-pool",
  "crates/rigos-state",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
jsonschema = { version = "0.29", default-features = false }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = false
