[package]
name = "rigos-evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
rigos-schema = { path = "../rigos-schema" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

