[package]
name = "rigos-performance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
rigos-schema = { path = "../rigos-schema" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[[bin]]
name = "rigos-performance"
path = "src/main.rs"
