[package]
name = "rigos-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rigos-core = { path = "../rigos-core" }
rigos-machine = { path = "../rigos-machine" }
rigos-xmrig = { path = "../rigos-xmrig" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "generate-schemas"
path = "src/main.rs"

[[bin]]
name = "validate-cli-output"
path = "src/validate.rs"

